--- a/educacion.html
+++ b/educacion.html
@@ -1,17 +1,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Educación | DSBC</title>
+  <title>EDUC | DSBC</title>
   <style>
     body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
       background-color: #f6f8fa;
       color: #24292f;
       margin: 0;
       padding: 0;
     }
     .container {
-      max-width: 960px;
+      max-width: 900px;
       margin: 60px auto;
       background-color: #fff;
       border-radius: 14px;
@@ -20,51 +20,45 @@
     }
     h2 {
       color: #1f6feb;
-      margin-bottom: 30px;
-      font-size: 28px;
-      border-bottom: 2px solid #1f6feb;
-      padding-bottom: 8px;
-    }
-    .card {
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 20px;
       margin-bottom: 20px;
-      background-color: #f9f9f9;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-      transition: transform 0.2s, box-shadow 0.2s;
     }
-    .card:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+    .doc-card {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 16px;
+      background: #f9f9f9;
+      margin-bottom: 16px;
+      max-width: 480px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
-    .card h3 {
+    .doc-card:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+    }
+    .doc-card h3 {
       margin: 0 0 8px 0;
       color: #1f6feb;
-      font-size: 20px;
+      font-size: 18px;
     }
-    .card p {
-      margin: 0 0 10px 0;
-      line-height: 1.6;
+    .doc-card p {
+      margin: 0 0 8px 0;
+      line-height: 1.4;
+      font-size: 14px;
     }
-    .card a {
-      display: inline-block;
+    .doc-card a {
       text-decoration: none;
-      background-color: #1f6feb;
-      color: #fff;
-      padding: 8px 14px;
-      border-radius: 6px;
+      color: #1f6feb;
       font-weight: bold;
-      transition: background-color 0.3s;
+      font-size: 14px;
     }
-    .card a:hover {
-      background-color: #155bb5;
+    .doc-card a:hover {
+      text-decoration: underline;
     }
     .back-link {
-      display: inline-block;
       margin-top: 40px;
-      color: #1f6feb;
+      display: block;
       text-decoration: none;
+      color: #1f6feb;
       font-weight: bold;
     }
     .back-link:hover {
@@ -74,55 +68,51 @@
 </head>
 
 <body>
+<div class="container">
 
-  <div class="container">
-    <h2>Educación</h2>
+  <h2>Educación</h2>
 
-    <!-- CERTIFICADO DE CRÉDITOS -->
-    <div class="card">
-      <h3>Certificado de Créditos Académicos</h3>
-      <p>Documento que acredita los créditos cursados y aprobados dentro del programa académico.</p>
-      <a href="soportes/educacion/certificado-creditos.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- ESG -->
-    <div class="card">
-      <h3>ESG – Estrategias de Sostenibilidad</h3>
-      <p>Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</p>
-      <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- ECONOMETRÍA -->
-    <div class="card">
-      <h3>Introducción a la Econometría</h3>
-      <p>Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
-      <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- ACTA -->
-    <div class="card">
-      <h3>Acta Académica</h3>
-      <p>Acta de Grado expedida por el SENA que certifica la culminación y aprobación del proceso formativo.</p>
-      <a href="soportes/educacion/acta-academica.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- DOCUMENTO OFICIAL TCOCF -->
-    <div class="card">
-      <h3>Documento Oficial TCOCF</h3>
-      <p>Documento oficial que certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.</p>
-      <a href="soportes/educacion/documento-oficial-tcocf.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- CERTIFICADO FINAL -->
-    <div class="card">
-      <h3>Certificado Final</h3>
-      <p>Documento oficial que detalla las calificaciones obtenidas y la intensidad horaria total del curso.</p>
-      <a href="soportes/educacion/certificado-final.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <a class="back-link" href="index.html">← Volver a la página principal</a>
-
+  <!-- Documento SENA -->
+  <div class="doc-card">
+    <h3>Diploma de Técnico en Contabilización de Operaciones Comerciales y Financieras</h3>
+    <p>Documento oficial emitido por el Servicio Nacional de Aprendizaje (SENA) que acredita la formación profesional integral de Daniel Steven Betancur Calderón. Fue expedido en Villavicencio el 28 de diciembre de 2020.</p>
+    <a href="soportes/educacion/diploma-sena.pdf" target="_blank">Ver documento</a>
   </div>
 
+  <div class="doc-card">
+    <h3>Acta Académica de Graduación Técnica</h3>
+    <p>Registro administrativo (No. 59060452) que formaliza la entrega del título técnico tras cumplir satisfactoriamente los requisitos exigidos por la institución. Incluye la firma digital de la Subdirectora del Centro de Industria y Servicios del Meta.</p>
+    <a href="soportes/educacion/acta-grado.pdf" target="_blank">Ver documento</a>
+  </div>
+
+  <div class="doc-card">
+    <h3>Certificado de Notas e Intensidad Horaria</h3>
+    <p>Documento que detalla el rendimiento académico, asignando una evaluación de 4.5 A en módulos como Contabilidad (740 horas), Inglés (180 horas) y Etapa Práctica (880 horas).</p>
+    <a href="soportes/educacion/certificado-notas.pdf" target="_blank">Ver documento</a>
+  </div>
+
+  <!-- Documento Universidad de los Llanos -->
+  <div class="doc-card">
+    <h3>Certificado de Avance de Créditos en Economía</h3>
+    <p>Constancia que certifica que el estudiante ha aprobado 152 de los 158 créditos totales (96.2%) del programa de Economía. Fue generada el 22 de diciembre de 2025 por la Oficina de Admisiones, Registro y Control Académico.</p>
+    <a href="soportes/educacion/avance-creditos.pdf" target="_blank">Ver documento</a>
+  </div>
+
+  <!-- Certificaciones Udemy -->
+  <div class="doc-card">
+    <h3>Certificado de Finalización: Introducción a la Econometría</h3>
+    <p>Diploma que acredita la realización de un curso de 6 horas bajo la instrucción de Gianfranco David Chamorro Rodriguez, finalizado el 23 de diciembre de 2025.</p>
+    <a href="soportes/educacion/certificado-econometria.pdf" target="_blank">Ver documento</a>
+  </div>
+
+  <div class="doc-card">
+    <h3>Certificado de Finalización: ESG Estrategia de Sostenibilidad</h3>
+    <p>Certificación internacional que valida 2.5 horas de estudio sobre sostenibilidad ambiental, social y de gobernanza, completada el 10 de febrero de 2026.</p>
+    <a href="soportes/educacion/certificado-esg.pdf" target="_blank">Ver documento</a>
+  </div>
+
+  <a class="back-link" href="index.html">← Volver a la página principal</a>
+
+</div>
 </body>
 </html>
