--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Educación | DSBC</title>
+  <title>CV | DSBC</title>
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -11,19 +11,57 @@
       padding: 0;
     }
     .container {
-      max-width: 960px;
+      max-width: 1000px;
       margin: 60px auto;
       background-color: #fff;
       border-radius: 14px;
       padding: 50px 60px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.06);
     }
-    h2 {
+    .header {
+      display: flex;
+      align-items: flex-start;
+      gap: 40px;
+      margin-bottom: 40px;
+    }
+    .profile-img {
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 50%;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+    }
+    .profile-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    .profile-info h1 {
       color: #1f6feb;
-      margin-bottom: 30px;
-      font-size: 28px;
+      margin: 0 0 8px 0;
+      font-size: 32px;
+    }
+    .profile-info p {
+      margin: 2px 0;
+      color: #57606a;
+      font-size: 16px;
+      line-height: 1.5;
+    }
+    .profile-summary {
+      margin-left: 40px;
+      color: #24292f;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+    .section {
+      margin-top: 50px;
+    }
+    .section h2 {
+      color: #1f6feb;
+      font-size: 26px;
       border-bottom: 2px solid #1f6feb;
       padding-bottom: 8px;
+      margin-bottom: 20px;
     }
     .cards {
       display: flex;
@@ -32,47 +70,43 @@
     }
     .card {
       flex: 1 1 250px;
-      background-color: #f9f9f9;
+      background: #f9f9f9;
       border-radius: 12px;
       padding: 20px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.08);
       transition: transform 0.2s, box-shadow 0.2s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .card:hover {
       transform: translateY(-3px);
       box-shadow: 0 10px 25px rgba(0,0,0,0.12);
     }
     .card h3 {
-      margin: 0 0 8px 0;
+      margin: 0 0 10px 0;
       color: #1f6feb;
       font-size: 20px;
     }
     .card p {
-      margin: 0 0 10px 0;
+      font-size: 14px;
       line-height: 1.6;
+      margin: 0 0 12px 0;
+      flex-grow: 1;
     }
     .card a {
-      display: inline-block;
       text-decoration: none;
+      display: inline-block;
       background-color: #1f6feb;
       color: #fff;
       padding: 8px 14px;
       border-radius: 6px;
       font-weight: bold;
       transition: background-color 0.3s;
+      align-self: flex-start;
     }
     .card a:hover {
       background-color: #155bb5;
-    }
-    .back-link {
-      display: inline-block;
-      margin-top: 40px;
-      color: #1f6feb;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .back-link:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
@@ -80,39 +114,86 @@
 <body>
 
   <div class="container">
-    <h2>Educación</h2>
-
-    <div class="cards">
-      <!-- Certificado de Créditos -->
-      <div class="card">
-        <h3>Certificado de Créditos Académicos</h3>
-        <p>Documento que acredita los créditos cursados y aprobados dentro del programa académico.</p>
-        <a href="soportes/educacion/certificado-creditos.pdf" target="_blank">Ir a documento</a>
+    <!-- Header -->
+    <div class="header">
+      <img class="profile-img" src="Imagen fondo azul.png" alt="Daniel Betancur">
+      
+      <div class="profile-info">
+        <h1>Daniel Betancur</h1>
+        <p>Estudiante de Economía</p>
+        <p>Universidad de los Llanos</p>
       </div>
 
-      <!-- ESG -->
-      <div class="card">
-        <h3>ESG – Estrategias de Sostenibilidad</h3>
-        <p>Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</p>
-        <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank">Ir a documento</a>
-      </div>
-
-      <!-- Econometría -->
-      <div class="card">
-        <h3>Introducción a la Econometría</h3>
-        <p>Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
-        <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank">Ir a documento</a>
-      </div>
-
-      <!-- Documentos SENA -->
-      <div class="card">
-        <h3>Documentos Oficiales – SENA</h3>
-        <p>Acta académica, certificado final y documento oficial TC/CF que certifican formación y calificaciones obtenidas.</p>
-        <a href="soportes/educacion/sena.html" target="_blank">Ver detalles</a>
+      <div class="profile-summary">
+        Investigador en economía ambiental y sostenible, con experiencia en análisis de proyectos, gestión administrativa y desarrollo de investigaciones en economía regional y turismo sostenible.
       </div>
     </div>
 
-    <a class="back-link" href="index.html">← Volver a la página principal</a>
+    <!-- Sección Educación -->
+    <div class="section">
+      <h2>Educación</h2>
+      <div class="cards">
+        <div class="card">
+          <h3>Certificado de Créditos</h3>
+          <p>Acredita los créditos cursados y aprobados dentro del programa académico.</p>
+          <a href="soportes/educacion/certificado-creditos.pdf" target="_blank">Ir a documento</a>
+        </div>
+        <div class="card">
+          <h3>ESG – Estrategias de Sostenibilidad</h3>
+          <p>Formación en estrategias de sostenibilidad y gestión responsable.</p>
+          <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank">Ir a documento</a>
+        </div>
+        <div class="card">
+          <h3>Introducción a la Econometría</h3>
+          <p>Fundamentos de econometría, análisis estadístico y modelos básicos.</p>
+          <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank">Ir a documento</a>
+        </div>
+        <div class="card">
+          <h3>Documentos Oficiales – SENA</h3>
+          <p>Acta académica, certificado final y documento oficial TC/CF que certifican formación y calificaciones.</p>
+          <a href="soportes/educacion/sena.html" target="_blank">Ver detalles</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Sección Experiencia -->
+    <div class="section">
+      <h2>Experiencia</h2>
+      <div class="cards">
+        <div class="card">
+          <h3>Pasantía en Investigación</h3>
+          <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos.</p>
+          <a href="experiencia.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
+          <p>Gestión administrativa, organización documental y manejo de información institucional.</p>
+          <a href="experiencia.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
+          <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
+          <a href="experiencia.html">Ver detalles</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Sección Investigaciones -->
+    <div class="section">
+      <h2>Investigaciones</h2>
+      <div class="cards">
+        <div class="card">
+          <h3>Proyectos Investigativos</h3>
+          <p>Acceso a investigaciones en ordenamiento territorial, economía y desarrollo regional.</p>
+          <a href="investigaciones.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Ecohotel Los Arrendajos</h3>
+          <p>Proyecto de turismo sostenible con planificación estratégica, análisis de mercado y gestión de stakeholders.</p>
+          <a href="fases-ecohotel.html">Ver fases</a>
+        </div>
+      </div>
+    </div>
 
   </div>
 
